// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`\`Button\` Component disabled variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button styles__rippleable styles__default styles__filled styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled filled
  </button>
  <button
    class="musae-button styles__rippleable styles__default styles__outlined styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled outlined
  </button>
  <button
    class="musae-button styles__rippleable styles__default styles__text styles__medium theme__title.medium"
    disabled=""
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    disabled text
  </button>
</DocumentFragment>
`;

exports[`\`Button\` Component variant render 1`] = `
<DocumentFragment>
  <button
    class="musae-button styles__default styles__rippleable styles__filled styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    filled
  </button>
  <button
    class="musae-button styles__default styles__rippleable styles__outlined styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    outlined
  </button>
  <button
    class="musae-button styles__default styles__rippleable styles__text styles__medium theme__title.medium"
    style="--color-button: #6750A4; --color-on-button: #FFF; --color-button-opacity-08: rgba(103,80,164,0.08); --color-on-surface-opacity-12: rgba(29,27,32,0.12); --color-on-surface-opacity-38: rgba(29,27,32,0.38);"
    type="button"
  >
    text
  </button>
</DocumentFragment>
`;
